Project_1/Rdubflex_and_EzPz/piazza_tests/check14.rc
structdef NODE {
    int x;
    function : void foo() {}
};  

structdef MYS {
    int x;
    function : void foo() {
        this.x = 1;   //ok
        this.y = 1;   //error
        this.foo();   //ok
        this.foo2(); //error
    }   
    function : void foo2() {
        this.foo();    //ok
        this.foo2();   //ok
    }   
};

function : void main() {
    // checks for 14a
    int x;
    x.x;  //x is not a struct

    NODE node;
    node.x;  //ok
    node.foo();  //ok
    node.y; //NODE has no field y

}   